[package]
name = "DEN-Launcher"
version = "2.0.0-rc.6+patch.8"
edition = "2021"

[dependencies]
dotenvy_macro = "0.15"
steamlocate = "2.0.1"
tempfile = "3.15.0"
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
zip = "2.2.2"
zipsign-api = "0.1.2"
semver = "1.0.25"
self-replace = "1.5.0"
serde = "1.0.217"
walkdir = "2.5.0"

[build-dependencies]
winres = "0.1"

[dependencies.clap]
version = "4.5.4"
features = ["derive", "env"]

[dependencies.sysinfo]
version = "0.33.1"

[dependencies.ureq]
version = "2.12.1"
features = ["json", "native-tls"]

[dependencies.tracing]
version = "0.1.40"
features = ["max_level_debug", "release_max_level_info"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.windows]
version = "0.61.1"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
