[workspace]
members = ["den-signer"]

[package]
name = "DEN-Launcher"
version = "2.1.0"
edition = "2024"

[features]
default = ["migrations"]
migrations = []

[[bin]]
name = "BetterMultiplayer"
path = "src/main.rs"

[dependencies]
dotenvy_macro = "0.15"

self-replace = "1.5.0"
den-signer = { path = "den-signer", default-features = false }
thiserror = "1.0"
pico-args = { version = "0.5", features = ["eq-separator"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
dotenvy = "0.15"


[dependencies.tracing]
version = "0.1.40"
features = ["max_level_debug", "release_max_level_info"]

[dependencies.tracing-subscriber]
version = "0.3.18"
default-features = false
features = ["fmt", "std"]

[dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_Networking_WinHttp",
  "Win32_UI_WindowsAndMessaging",
]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
strip = true
