[package]
name = "den-signer"
version = "0.1.0"
edition = "2024"

[lib]
name = "den_signer"
path = "src/lib.rs"

[[bin]]
name = "den-signer"
path = "src/main.rs"

[dependencies]
bitcode = "0.6.9"
thiserror = "1.0"

[dependencies.ed25519-dalek]
version = "2.2.0"
default-features = false
features = []

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[features]
default = ["signing"]
signing = [
    "dep:rand",
    "dep:clap",
    "ed25519-dalek/rand_core",
    "ed25519-dalek/fast",
]
